--- a/EstacaoDeRecarga.MVC/Views/EstacaoRecargaMVC/Create.cshtml
+++ b/EstacaoDeRecarga.MVC/Views/EstacaoRecargaMVC/Create.cshtml
@@ -47,4 +47,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+<script src="~/js/methodspt.js"></script>
 }
