--- a/EstacaoDeRecarga.MVC/Views/EstacaoRecargaMVC/Details.cshtml
+++ b/EstacaoDeRecarga.MVC/Views/EstacaoRecargaMVC/Details.cshtml
@@ -9,29 +9,29 @@
 <div>
     <h4>Estação de Recarga</h4>
     <hr />
-    <dl class="row">                
-        <dt class = "col-sm-2">
+    <dl class="row">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Tipo)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Latitude)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Latitude)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Longitude)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Longitude)
         </dd>
     </dl>
@@ -40,3 +40,7 @@
     @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
     <a asp-action="Index">Voltar para a lista</a>
 </div>
+
+@section Scripts {
+    <script src="~/js/methodspt.js"></script>
+    }
