--- a/EstacaoDeRecarga.MVC/Views/EstacaoRecargaMVC/Create.cshtml
+++ b/EstacaoDeRecarga.MVC/Views/EstacaoRecargaMVC/Create.cshtml
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>           
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -21,8 +21,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Tipo" class="control-label"></label>
-                <select asp-for="Tipo" asp-items="TiposDeEstacao" class = "form-control"></select>                
+                <select asp-for="Tipo" asp-items="TiposDeEstacao" class="form-control"></select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
+            </div>
+            <div>
+                <h6>Exemplo de latitude/longitude: -22,9038301 / -43,5662599</h6>
             </div>
             <div class="form-group">
                 <label asp-for="Latitude" class="control-label"></label>
