--- a/EstacaoDeRecarga.MVC/Views/Home/Index.cshtml
+++ b/EstacaoDeRecarga.MVC/Views/Home/Index.cshtml
@@ -60,7 +60,8 @@
                                 marker = new google.maps.Marker({
                                     position: latlng, /*new google.maps.LatLng(data[i][1], data[i][2]),*/
                                     title: data[i].nome.toString(), /*data[indexJS][0].toString()*/
-                                    map: map
+                                    map: map,
+                                    icon:'/img/iconeMapaEnergia6.ico'
                                 });
                             }
                         }
